# bookshelf_service

./: README.md
backend/source/: CMakeLists.txt  config.json  main.cpp
backend/source/builder/: application_builder.cpp  application_builder.h
backend/source/controller/: book_controller.cpp  book_controller.h
backend/source/error_handler/: error_handler.cpp  error_handler.h
backend/source/service/: book_service.cpp  book_service.h
